BUG FIX: hisat2 used 'python'; now patched to use 'python2' [#124]

--- a/CBI/hisat2/Makefile
+++ b/CBI/hisat2/Makefile
@@ -14,12 +14,28 @@ $(DOWNLOAD_TARGET):
 	unzip $(ZIPBALL); \
 
 $(BUILD_TARGET): $(DOWNLOAD_TARGET)
-	cp -pR $(BUILD_PATH); \
-	module --force purge; \
-	make hisat2-align-s hisat2-build-s hisat2-inspect-s
+	td=$$(mktemp -d); \
+	rm -rf "$${td}"; \
+	cp -p -R "$(BUILD_PATH)" "$${td}"; \
+	cd "$${td}"; \
+	mapfile -t files < <(find . -type f -executable); \
+	for ff in "$${files[@]}"; do \
+	    sed -i -E "s/^(#[[:space:]]*\!\/usr\/bin\/env[[:space:]]+python)([[:space:]]|$$)/\12\2/g" "$${ff}"; \
+	done; \
+	mv "$${td}" "$(BUILD_PATH)/.patched"; \
+	rm -rf "$${td}"
+	diff -u -w "$(BUILD_PATH)" "$(BUILD_PATH)/.patched" || true
+	touch "$(BUILD_PATH)/.patched/done"
 
-$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
-	cp -pR $(BUILD_HOME)/$(NAME)-$(VERSION) $(SOFTWARE_HOME)
+
+$(INSTALL_TARGET): $(BUILD_TARGET)
+	mkdir -p "$(PREFIX)"
+	chmod -R u+w "$(PREFIX)"
+	rm -rf "$(PREFIX)"
+	mkdir -p "$(PREFIX)"
+	cp -R "$(BUILD_PATH)/.patched" "$(BUILD_PATH)/$(BUILD_NAME)"
+	cp -R "$(BUILD_PATH)/$(BUILD_NAME)" "$(PREFIX)/.."
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
