gsl: Add links + 'make available-version'

--- a/CBI/gsl/Makefile
+++ b/CBI/gsl/Makefile
@@ -7,6 +7,8 @@ include ../utils.mk
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O http://mirrors.syringanetworks.net/gnu/gsl/$(TARBALL); \
+	curl -L -O https://mirror.ibcp.fr/pub/gnu/$(NAME)/$(TARBALL); \
 	tar xvfz $(TARBALL)
 
+available-version:
+	curl --silent https://git.savannah.gnu.org/cgit/gsl.git/tree/NEWS | grep -F "What is new in gsl-" | sed -E 's/.* What is new in gsl-([[:digit:].]+).*/\1/'
