bcftools: patch python->python3 shebangs

--- a/CBI/bcftools/Makefile
+++ b/CBI/bcftools/Makefile
@@ -13,5 +13,29 @@ $(DOWNLOAD_TARGET):
 	curl -L -O https://github.com/samtools/$(NAME)/releases/download/$(VERSION)/$(TARBALL); \
 	tar jxf $(TARBALL)
 
+$(BUILD_TARGET): $(DOWNLOAD_TARGET)
+	td=$$(mktemp -d); \
+	rm -rf "$${td}"; \
+	cp -p -R "$(BUILD_PATH)" "$${td}"; \
+	cd "$${td}"; \
+	mapfile -t files < <(find . -type f -executable); \
+	for ff in "$${files[@]}"; do \
+	    sed -i -E "s/^(#[[:space:]]*\!\/usr\/bin\/env[[:space:]]+python)([[:space:]]|$$)/\13\2/g" "$${ff}"; \
+	done; \
+	mv "$${td}" "$(BUILD_PATH)/.patched"; \
+	rm -rf "$${td}"
+	diff -u -w "$(BUILD_PATH)" "$(BUILD_PATH)/.patched" || true
+	touch "$(BUILD_PATH)/.patched/done"
+
+
+$(INSTALL_TARGET): $(BUILD_TARGET)
+	make --quiet pre_install
+	mkdir -p $(PREFIX)
+	cd $(BUILD_PATH)/.patched; \
+	make --quiet install
+	make --quiet post_install
+	ls -la $(PREFIX)
+	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
 available-version:
 	@curl --silent $(GITHUB_REPO)/develop/NEWS | grep -E "^#+ Release [[:digit:]]" | head -1 | sed -E 's/(^#+ Release *| .*)//g'
