bowtie2: patch python->python2 shebangs for old 2.3.5/2.3.5.1 versions

--- a/CBI/bowtie2/Makefile
+++ b/CBI/bowtie2/Makefile
@@ -14,10 +14,27 @@ $(DOWNLOAD_TARGET):
 	unzip $(TARBALL); \
 	mv $(NAME)-$(VERSION)-linux-x86_64 $(NAME)-$(VERSION)
 
-$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
+$(BUILD_TARGET): $(DOWNLOAD_TARGET)
+	td=$$(mktemp -d); \
+	rm -rf "$${td}"; \
+	cp -p -R "$(BUILD_PATH)" "$${td}"; \
+	cd "$${td}"; \
+	mapfile -t files < <(find . -type f -executable); \
+	for ff in "$${files[@]}"; do \
+	    sed -i -E "s/^(#[[:space:]]*\!\/usr\/bin\/env[[:space:]]+python)([[:space:]]|$$)/\12\2/g" "$${ff}"; \
+	done; \
+	mv "$${td}" "$(BUILD_PATH)/.patched"; \
+	rm -rf "$${td}"
+	diff -u -w "$(BUILD_PATH)" "$(BUILD_PATH)/.patched" || true
+	touch "$(BUILD_PATH)/.patched/done"
+
+
+$(INSTALL_TARGET): $(BUILD_TARGET)
+	make --quiet pre_install
 	mkdir -p $(PREFIX)
-	cp -R $(BUILD_PATH) $(PREFIX)/..
-	make post_install
+	cp -pR $(BUILD_PATH)/.patched/* "$(PREFIX)"
+	rm "$(PREFIX)"/done
+	make --quiet post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
