--- a/CBI/byobu/Makefile
+++ b/CBI/byobu/Makefile
@@ -19,3 +19,6 @@ $(DOWNLOAD_TARGET):
 test: $(BUILD_TARGET)
 	cd $(BUILD_PATH); \
 	make check
+
+available-versions:
+	@curl --silent https://launchpad.net/byobu/+download | grep -E "[[:digit:].]+[[:blank:]]+release" | head -n 1 | sed -E 's/(^[[:blank:]]+|[[:blank:]]+release.*)//g'
