--- a/CBI/dmtcp/Makefile
+++ b/CBI/dmtcp/Makefile
@@ -1,11 +1,17 @@
 include config.mk
 include ../utils.mk
 
+GITHUB_REPO=https://github.com/dmtcp/dmtcp
+TARBALL=v$(VERSION).tar.gz
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_PATH)
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/dmtcp/dmtcp/releases/download/$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/archive/refs/tags/$(TARBALL); \
 	tar zxf $(TARBALL)
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
