conda-stage: Add 'make available-version'

--- a/CBI/conda-stage/Makefile
+++ b/CBI/conda-stage/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 
+GITHUB_REPO=https://github.com/HenrikBengtsson/$(NAME)
 TARBALL=$(VERSION).tar.gz
 
 ## ----------------------------------------------------------
@@ -10,7 +11,7 @@ TARBALL=$(VERSION).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/HenrikBengtsson/$(NAME)/archive/refs/tags/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/archive/refs/tags/$(TARBALL); \
 	tar xf $(TARBALL)
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -18,3 +19,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^[[:space:]]+$(NAME) " | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
