--- a/CBI/shellcheck-repl/Makefile
+++ b/CBI/shellcheck-repl/Makefile
@@ -26,3 +26,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^[[:space:]]+$(NAME) " | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
