--- a/.github/workflows/luacheck.yml
+++ b/.github/workflows/luacheck.yml
@@ -6,7 +6,7 @@ jobs:
   checks:
     if: "! contains(github.event.head_commit.message, '[ci skip]')"
     
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     
     name: luacheck
 
@@ -15,10 +15,10 @@ jobs:
       
     steps:
     - name: Checkout git repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       
     - name: Install Lua
-      uses: leafo/gh-actions-lua@v8.0.0
+      uses: leafo/gh-actions-lua@v11
 
     - name: Install dependencies
       run: |
