--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -6,7 +6,7 @@ jobs:
   checks:
     if: "! contains(github.event.head_commit.message, '[ci skip]')"
     
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     
     name: shellcheck
 
@@ -15,15 +15,15 @@ jobs:
       
     steps:
     - name: Checkout git repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
         sudo apt-get install -y shellcheck
         shellcheck --version
-        curl -L -O https://github.com/koalaman/shellcheck/releases/download/v0.8.0/shellcheck-v0.8.0.linux.x86_64.tar.xz
-        tar Jxf shellcheck-v0.8.0.linux.x86_64.tar.xz
-        mv shellcheck-v0.8.0/shellcheck .
+        curl -L -O https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.linux.x86_64.tar.xz
+        tar Jxf shellcheck-v0.10.0.linux.x86_64.tar.xz
+        mv shellcheck-v0.10.0/shellcheck .
         PATH=".:$PATH" shellcheck --version
 
     - name: ShellCheck
