--- a/CBI/r/Makefile
+++ b/CBI/r/Makefile
@@ -70,6 +70,7 @@ ifeq ($(findstring alpha,$(VERSION)),alpha)
 	DOWNLOAD_URL_PATH=https://cran.r-project.org/src/base-prerelease
 else ifeq ($(findstring beta,$(VERSION)),beta)
 	TARBALL=R-latest.tar.gz
+        TARBALL=R-beta_2025-04-02_r88102.tar.gz
 	DOWNLOAD_URL_PATH=https://cran.r-project.org/src/base-prerelease
 else ifeq ($(findstring rc,$(VERSION)),rc)
 	TARBALL=R-latest.tar.gz
