--- a/CBI/wip-wormhole-william/Makefile
+++ b/CBI/wip-wormhole-william/Makefile
@@ -1,22 +1,13 @@
 include config.mk
 include ../utils.mk
 
-ARCH=linux-amd64
-TARBALL=$(NAME)-$(ARCH)  ## a binary
-GITHUB_REPO=https://github.com/psanford/$(NAME)
-
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
-$(DOWNLOAD_TARGET):
-	mkdir -p $(BUILD_PATH); \
-	cd $(BUILD_PATH); \
-	curl -L -o $(NAME) $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
-	chmod ugo+x $(NAME)
-
-$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
+$(INSTALL_TARGET):
 	mkdir -p "$(PREFIX)"
-	cp -R $(BUILD_PATH)/$(NAME) $(PREFIX)
+	module load $(BUILD_MODULES); \
+	GOBIN=$(PREFIX) go install github.com/psanford/wormhole-william@v$(VERSION)
 	ln -s $(PREFIX)/$(NAME) $(PREFIX)/wormhole
 	make post_install
 	ls -la $(PREFIX)
