wormhole-william: fix make

--- a/CBI/wip-wormhole-william/Makefile
+++ b/CBI/wip-wormhole-william/Makefile
@@ -1,6 +1,8 @@
 include config.mk
 include ../utils.mk
 
+GITHUB_REPO=https://github.com/psanford/wormhole-william
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
