conda-stage: fix 'make available-version'

--- a/CBI/conda-stage/Makefile
+++ b/CBI/conda-stage/Makefile
@@ -21,4 +21,4 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
 available-version:
-	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^[[:space:]]+$(NAME) " | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
+	@curl --silent $(GITHUB_REPO)/tags | pandoc --from=html --to=plain | grep -E "^([[:space:]]+$(NAME)|[[:digit:].]+)\b" | head -1 | sed -E 's/[[:space:]]+$(NAME) //'
