--- a/CBI/kitty/Makefile
+++ b/CBI/kitty/Makefile
@@ -1,10 +1,9 @@
 include config.mk
 include ../utils.mk
 
-ARCH=linux-amd64
-TARBALL=$(NAME2)-$(ARCH)
+ARCH=x86_64
+TARBALL=$(NAME)-$(VERSION)-$(ARCH).txz
 GITHUB_REPO=https://github.com/kovidgoyal/$(NAME)
-
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -13,12 +12,14 @@ $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_PATH); \
 	cd $(BUILD_PATH); \
 	curl -L -O $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
-        chmod ugo+x $(TARBALL); \
-	mv $(TARBALL) $(NAME2)
+	touch .downloaded
+#        chmod ugo+x $(TARBALL); \
+#	mv $(TARBALL) $(NAME2)
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p "$(PREFIX)"
-	cp -p $(BUILD_PATH)/$(NAME2) $(PREFIX)/kitten
+	tar xf $(BUILD_PATH)/$(TARBALL) -C $(PREFIX)
+	touch $(INSTALL_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
