hdf5: Update URLs + add 'make available-version'

--- a/CBI/hdf5/Makefile
+++ b/CBI/hdf5/Makefile
@@ -4,6 +4,7 @@ include ../utils.mk
 #DOWNLOAD_URL=https://hdf-wordpress-1.s3.amazonaws.com/wp-content/uploads/manual/HDF5/HDF5_1_10_6/source
 DOWNLOAD_URL=https://support.hdfgroup.org/ftp/HDF5/releases/$(NAME)-$(VERSION_X_Y)/$(NAME)-$(VERSION)/src
 
+GITHUB_REPO=https://github.com/HDFGroup/hdf5
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -14,3 +15,5 @@ $(DOWNLOAD_TARGET):
 	curl -L -O $(DOWNLOAD_URL)/$(TARBALL); \
 	tar xvfz $(TARBALL)
 
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//' | sed -E 's/^hdf5_//'
