proj: cmake 3.26.5 that comes with Rocky 8 is sufficient

--- a/CBI/proj/Makefile
+++ b/CBI/proj/Makefile
@@ -2,13 +2,14 @@ include config.mk
 include ../utils.mk
 
 ## PROJ (>= 6.3.0) requires sqlite3 (>= 3.11)
+## PROJ (>= 9.7.0) requires sqlite3 (>= 3.11) and CMake (>= 3.16)
 ifeq ($(VERSION_X_Y),6.3)
 else ifeq ($(VERSION_X),7)
-    CONFIG_MODULES=CBI sqlite
+#    CONFIG_MODULES=CBI sqlite
 else ifeq ($(VERSION_X),8)
-    CONFIG_MODULES=CBI sqlite
+#    CONFIG_MODULES=CBI sqlite
 else ifeq ($(VERSION_X),9)
-    CONFIG_MODULES=CBI sqlite
+#    CONFIG_MODULES=CBI sqlite
     $(error Not yet supported: $NAME >= 9 requires adjusting to CMake)
 endif
 
