--- a/CBI/gdal/Makefile
+++ b/CBI/gdal/Makefile
@@ -27,22 +27,37 @@ $(DOWNLOAD_TARGET):
 ## GDAL (>= 3.0.0)
 ifeq ($(VERSION_X),3)
     ## GDAL (>= 3.5.0) requires CMake and a modern compiler
-    CONFIG_MODULES=CBI cmake scl-devtoolset/10
+    ## Rocky 8 provides a sufficient CMake and compiler
+
+    ifeq ($(VERSION_X_Y),3.6)
+    else
+        ## Rocky 8 provides only libarchive 3.3
+        CONFIG_MODULES:=$(CONFIG_MODULES) CBI libarchive
+        ## Assert
+        LIBARCHIVE_VERSION=$(shell module purge; module load $(CONFIG_MODULES); pkg-config --modversion libarchive)
+        LIBARCHIVE_VERSION_X_Y_Z := $(shell echo "$(LIBARCHIVE_VERSION)" | sed -E 's/([[:digit:]]+)([.-])([[:digit:]]+)([.-])([[:digit:]]+).*/\1\2\3\4\5/')
+        LIBARCHIVE_VERSION_X_Y := $(shell echo "$(LIBARCHIVE_VERSION_X_Y_Z)" | sed -E 's/[.-][^.-]*$$//')
+        ifeq ($(LIBARCHIVE_VERSION_X_Y),3.3)
+            $(error "GDAL (>= 3.7) requires libarchive (>= 3.5.0), but you got $(LIBARCHIVE_VERSION)")
+        else ifeq ($(LIBARCHIVE_VERSION_X_Y),3.4)
+            $(error "GDAL (>= 3.7) requires libarchive (>= 3.5.0), but you got $(LIBARCHIVE_VERSION)")
+        endif
+    endif
 
     ## GDAL (>= 3.0.0) requires PROJ (>= 6.0.0)
-    CONFIG_MODULES:=$(CONFIG_MODULES) CBI proj/8.2.1
+    CONFIG_MODULES:=$(CONFIG_MODULES) CBI proj
+
+    ## Use a modern HDF5, because the 'hdf5r' R package requires hdf5 (>= 1.8.13)
+    #CONFIG_MODULES:=$(CONFIG_MODULES) CBI hdf5
+
+    ## WORKAROUND: gdal's configure doesn't find proj/6.0.0 from pkgconfig or LD_LIBRARY_PATH
+    PROJ_HOME=$(shell module purge; module load $(CONFIG_MODULES); dirname "$$(dirname "$$(command -v proj)")")
+    ## WORKAROUND: gdal's configure doesn't find hdf5 from pkgconfig or LD_LIBRARY_PATH
+    HDF5_HOME=$(shell module purge; module load $(CONFIG_MODULES); dirname "$$(dirname "$$(command -v h5stat)")")
 
     ## Let's use a modern SQLite3 version
     CONFIG_MODULES:=$(CONFIG_MODULES) CBI sqlite
-
-    ## Use a modern HDF5, because the 'hdf5r' R package requires hdf5 (>= 1.8.13)
-    CONFIG_MODULES:=$(CONFIG_MODULES) CBI hdf5
-
-    ## WORKAROUND: gdal's configure doesn't find proj/6.0.0 from pkgconfig or LD_LIBRARY_PATH
-    PROJ_HOME=$(shell module load $(CONFIG_MODULES); dirname "$$(dirname "$$(command -v proj)")")
-    ## WORKAROUND: gdal's configure doesn't find hdf5 from pkgconfig or LD_LIBRARY_PATH
-    HDF5_HOME=$(shell module load $(CONFIG_MODULES); dirname "$$(dirname "$$(command -v h5stat)")")
-    SQLITE3_HOME=$(shell module load $(CONFIG_MODULES); dirname "$$(dirname "$$(command -v sqlite3)")")
+    SQLITE3_HOME=$(shell module purge; module load $(CONFIG_MODULES); dirname "$$(dirname "$$(command -v sqlite3)")")
     CONFIG_OPTS=--disable-rpath --with-hdf5="$(HDF5_HOME)" --with-proj="$(PROJ_HOME)" --with-sqlite3="$(SQLITE3_HOME)"
 
 debug2:
@@ -53,21 +68,19 @@ debug2:
 $(CONFIG_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p "$(BUILD_PATH)/build"
 	cd "$(BUILD_PATH)/build"; \
-	module purge; \
+	module --force purge; \
 	module load $(CONFIG_MODULES); \
 	cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX="$(PREFIX)" -DSQLITE3_INCLUDE_DIR="$(SQLITE3_HOME)/include"  -DSQLITE3_LIBRARY_RELEASE="$(SQLITE3_HOME)/lib" -DPROJ_INCLUDE_DIR="$(PROJ_HOME)/include" -DPROJ_LIBRARY_RELEASE="$(PROJ_HOME)/lib/libproj.so" -DGDAL_ENABLE_DRIVER_WEBP=OFF
 
 
 $(BUILD_TARGET): $(CONFIG_TARGET)
 	cd "$(BUILD_PATH)/build"; \
-	module purge; \
+	module --force purge; \
 	module load $(BUILD_MODULES); \
 	cmake --build .
 
 $(INSTALL_TARGET): $(BUILD_TARGET)
 	cd "$(BUILD_PATH)/build"; \
-	module purge; \
-	module load $(BUILD_MODULES); \
         cmake --build . --target install
 else
 $(INSTALL_TARGET): $(BUILD_TARGET)
