BUG FIX: 'markdownlint-cli' did not make sure BUILD_PATH exists

--- a/CBI/markdownlint-cli/Makefile
+++ b/CBI/markdownlint-cli/Makefile
@@ -26,6 +26,7 @@ include ../utils.mk
 ##
 ## /HB 2022-10-21
 $(INSTALL_TARGET):
+	mkdir -p $(BUILD_PATH)
 	cd $(BUILD_PATH); \
 	module purge; \
 	npm_config_cache="$$(mktemp -d)" npm install --prefix="$(PREFIX)" markdownlint-cli
