NPM installations: * Use 'npm install --engine-strict ...' to produce an error instead of a non-blocking warning when Node.js version is insufficient * Use empty npm cache also for looking up the latest version

--- a/CBI/markdown-link-check/Makefile
+++ b/CBI/markdown-link-check/Makefile
@@ -26,13 +26,14 @@ include ../utils.mk
 ##
 ## /HB 2022-10-21
 $(INSTALL_TARGET):
+	mkdir -p $(BUILD_PATH)
 	cd $(BUILD_PATH); \
 	module purge; \
-	npm_config_cache="$$(mktemp -d)" npm install --prefix="$(PREFIX)" markdown-link-check
+	npm_config_cache="$$(mktemp -d)" npm install --engine-strict --prefix="$(PREFIX)" markdown-link-check@$(VERSION)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
 available-version:
-	npm view markdown-link-check version
+	npm_config_cache="$$(mktemp -d)" npm view markdown-link-check version
 
