symphony/5.7.3: bug fixes

--- a/CBI/symphony/Makefile
+++ b/CBI/symphony/Makefile
@@ -1,9 +1,10 @@
 include config.mk
 include ../utils.mk
 
-BUILD_TARGET=$(PREFIX)/lib/pkgconfig/osi-sym.pc
-INSTALL_TARGET=$(BUILD_TARGET)
+INSTALL_TARGET_FILE=lib/pkgconfig/osi-sym.pc
+INSTALL_TARGET=$(PREFIX)/$(INSTALL_TARGET_FILE)
 include ../utils.mk
+
 
 GITHUB_REPO=https://github.com/coin-or/SYMPHONY
 DOWNLOAD_URL=$(GITHUB_REPO)/releases/download/$(NAME)_$(VERSION_X_Y)
@@ -18,12 +19,12 @@ $(DOWNLOAD_TARGET):
 	chmod u+x coinbrew; \
 	./coinbrew fetch SYMPHONY@$(VERSION)
 
-$(BUILD_TARGET): $(DOWNLOAD_TARGET)
+## WORKAROUND: We need to build with '--tests=main', because the default
+## '--tests=all' triggers error on when "Running Osi unit test", at least
+## for SYMPHONY 5.7.3 with Osi 0.108.11.
+$(INSTALL_TARGET): $(BUILD_TARGET)
 	cd $(BUILD_PATH); \
 	./coinbrew build SYMPHONY --prefix="$(PREFIX)" --tests=main --verbosity=1
-
-$(INSTALL_TARGET): $(BUILD_TARGET)
-
 
 available-version:
 	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//' | sed -E 's/^hdf5_//'
