cellranger: update URLs

--- a/CBI/cellranger/Makefile
+++ b/CBI/cellranger/Makefile
@@ -6,7 +6,7 @@ include ../utils.mk
 ## SOFTWARE
 ## ----------------------------------------------------------
 $(TARBALL):
-	$(error "Go to https://support.10xgenomics.com/single-cell-gene-expression/software/downloads/latest and follow the curl/wget download instructions. Download '$@' to $(PWD)")
+	$(error "Go to https://www.10xgenomics.com/support/software/cell-ranger/downloads and follow the curl/wget download instructions. Download '$@' to $(PWD)")
 
 $(BUILD_HOME)/$(TARBALL): $(TARBALL)
 	mkdir -p $(BUILD_HOME); \
@@ -25,5 +25,5 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 
 
 available-version:
-	@curl --silent https://www.10xgenomics.com/support/software/cell-ranger/downloads | sed -E 's/.*cellranger-([[:digit:].]+)[.]tar[.]gz.*/\1/g'
+	@curl --silent https://www.10xgenomics.com/support/software/cell-ranger/downloads | sed -E 's/.*cellranger-([[:digit:].]+)[.]tar[.]gz.*/\1/g'; echo
 
